2005-07-08  Andras Varga

	* engine: new filters: divider, modulo, difference, sum, 
	diffquot [from Michael Tuexen], slidingwinavg

	* fix: in winavg, average of last <winsize values wasn't written out

	* getvectors.cc: fix: last bufsize bytes of the file wasn't scanned for 
	vector lines

	* more dialogs display filter descriptions now

	* vectors with filters are now marked with '*'

2005-04-30  Andras Varga

	* bltgraph.tcl: several refinements on the chart window and in its
	properties dialog

2005-03-31  ------ omnetpp-3.1 released ------

2005-01-17  Andras Varga

	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
	[suggested by Michael Tuexen]

2004-12-29  ------ omnetpp-3.0 released ------

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-31  Andras Varga

        * Plove internals rewritten from scratch.
